--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="todoApp">
 
 <head>
     <meta charset="UTF-8">
@@ -9,10 +9,19 @@
 
     <link rel="stylesheet" href="./css/styles.css">
 
+    <script src="/libs/angular.min.js"></script>
+    <script src="/libs/angular-route.min.js"></script>
+    <script src="/app.module.js"></script>
+    <script src="/app.routes.js"></script>
+    <script src="/components/todo/todoController.js"></script>
 </head>
 
-<body>
-    <p>good jub in htmlss</p>
+<body ng-controller="todoController">
+    <header ng-include="'/shared/header/header.html'"></header>
+    
+    <main ng-view></main>
+
+
 </body>
 
 </html>
